<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="25dp"
    android:paddingEnd="16dp"
    android:paddingTop="30dp"
    tools:context=".ui.AlbumFragment"
    android:id="@+id/albumFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="Álbumes"
            android:contentDescription="Listado de álbumes para visualizar todos los disponibles"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/negro"/>

        <FrameLayout
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_gravity="center"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:clipToOutline="true"
            android:elevation="4dp"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:background="@color/verde_oscuro_3">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:src="@drawable/album"
                android:contentDescription="Icono de álbumes"
                app:tint="@android:color/white"/>
        </FrameLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="Mira todos los álbumes que tenemos para ti"
        android:textSize="16sp"
        android:textColor="@color/gris_oscuro"
        android:layout_marginBottom="36dp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout_marginBottom="16dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/albumsRv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:listitem="@layout/album_item"
        android:clipToPadding="false"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:scrollbars="vertical" />
</LinearLayout>