...
            android:textSize="18sp"
            android:textColor="@color/gris_oscuro"
            android:layout_marginBottom="34dp"/>

        <!-- Opción 1: Álbumes -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/albumContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="25dp"
            android:clickable="true"
...
